/*
 * Copyright (c) 2019 Oracle and/or its affiliates. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */


syntax = "proto3";
option java_package = "io.helidon.grpc.examples.common";

service GreetService {
  rpc Greet (GreetRequest) returns (GreetResponse) {}
  rpc SetGreeting (SetGreetingRequest) returns (SetGreetingResponse) {}
}

message GreetRequest {
  string name = 1;
}

message GreetResponse {
  string message = 1;
}

message SetGreetingRequest {
  string greeting = 1;
}

message SetGreetingResponse {
  string greeting = 1;
}
